--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,12 @@
 flask==2.0.1
 torch>=2.2.0
 torchaudio>=2.2.0
-openai-whisper==20231117
-pyannote.audio==3.1.1
+openai-whisper==20240930
+pyannote.audio==3.3.2
+pyannote.core==5.0.0
+pyannote.database==5.1.3
+pyannote.metrics==3.2.1
+pyannote.pipeline==3.0.1
 werkzeug==2.0.1
 python-dotenv
+numpy==2.1.3
